--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -4,6 +4,10 @@
 % 這檔案為論文的主檔案, 在設計上是不需要做任何的修改.
 % ------------------------------------------------
 
+% magic arguments for VS Code extension LaTeX Workshop
+% !TEX program = xelatex
+% !TEX options = -shell-escape -output-directory="%OUTDIR%" -interaction=nonstopmode -file-line-error "%DOC%"
+
 % 基本設定 Basic configuration
 \input{./template/configure}
 
